--- a/packages/esm-appointments-app/src/appointments-calendar/weekly-workload-module.scss
+++ b/packages/esm-appointments-app/src/appointments-calendar/weekly-workload-module.scss
@@ -78,8 +78,8 @@
 }
 .serviceArea {
   display: grid;
-  column-gap: 2rem;
-  grid-template-columns: 0fr 1fr;
+  padding: 0.125rem;
+  grid-template-columns: 4fr 1fr;
   justify-content: flex-start;
   text-align: left;
   margin: 0.125rem;
@@ -103,31 +103,26 @@
 .largeDesktop {
   height: 150px;
 }
-
 .red {
-  background-color: colors.$red-60;
+  background-color: colors.$red-70;
   color: colors.$white;
   font-weight: bold;
-  padding: 0.0125rem;
 }
 
 .purple {
-  background-color: colors.$purple-50;
+  background-color: colors.$yellow-70;
   color: colors.$white;
   font-weight: bold;
-  padding: 0.0125rem;
 }
 
 .blue {
-  background-color: colors.$blue-60;
+  background-color: colors.$blue-70;
   color: colors.$white;
   font-weight: bold;
-  padding: 0.0125rem;
 }
 
 .green {
-  background-color: colors.$green-50;
+  background-color: colors.$green-70;
   color: colors.$white;
   font-weight: bold;
-  padding: 0.0125rem;
 }
