--- a/packages/esm-appointments-app/src/appointments-calendar/appointments-calendar-list-view.scss
+++ b/packages/esm-appointments-app/src/appointments-calendar/appointments-calendar-list-view.scss
@@ -12,5 +12,10 @@
   grid-template-rows: repeat(6, minmax(0px, 1fr));
 }
 .backgroundColor {
+  margin: 1px 0 0;
+  transition: width 0.24s ease-in-out;
+  padding: 0 2rem 0;
+  position: relative;
+  min-height: calc(100vh - 80px);
   background-color: colors.$white;
 }
