--- a/packages/esm-appointments-app/src/appointments-calendar/weekly-workload-module.scss
+++ b/packages/esm-appointments-app/src/appointments-calendar/weekly-workload-module.scss
@@ -86,6 +86,10 @@
   @include type.type-style('label-02');
   color: #020f1b;
   cursor: pointer;
+
+  :hover {
+    opacity: 0.8;
+  }
   & > span:first-child {
     text-align: left;
     text-overflow: ellipsis;
