(feat) : enhance registry UI and add null check for obs concept

--- a/packages/esm-patient-registration-app/src/patient-verification/patient-verification.scss
+++ b/packages/esm-patient-registration-app/src/patient-verification/patient-verification.scss
@@ -1,4 +1,7 @@
 @use '@carbon/colors';
+@use '@carbon/layout';
+@use '@carbon/type';
+@use '@openmrs/esm-styleguide/src/vars' as *;
 @import '../patient-registration/patient-registration.scss';
 
 /* Desktop */
@@ -22,4 +25,17 @@
 
 .errorWrapper {
   margin: 0 0 1rem 0;
+}
+
+.label01 {
+  @include type.type-style('label-01');
+  margin-top: layout.$spacing-05;
+  margin-bottom: layout.$spacing-05;
+  color: $ui-04;
+}
+
+.productiveHeading02 {
+  @include type.type-style('heading-compact-02');
+  color: $ui-04;
+  cursor: pointer;
 }
