--- a/packages/esm-patient-registration-app/src/client-registry/patient-verification/patient-verification.scss
+++ b/packages/esm-patient-registration-app/src/client-registry/patient-verification/patient-verification.scss
@@ -2,7 +2,7 @@
 @use '@carbon/layout';
 @use '@carbon/type';
 @use '@openmrs/esm-styleguide/src/vars' as *;
-@import '../patient-registration/patient-registration.scss';
+@use '../../patient-registration/patient-registration.scss' as *;
 
 /* Desktop */
 :global(.omrs-breakpoint-gt-tablet) {
