--- a/packages/esm-patient-registration-app/src/client-registry/hie-client-registry/modal/confirm-hie.scss
+++ b/packages/esm-patient-registration-app/src/client-registry/hie-client-registry/modal/confirm-hie.scss
@@ -1,5 +1,6 @@
 @use '@carbon/type';
-@use '@openmrs/esm-styleguide/src/vars' as *;
+@use '@carbon/layout';
+@use '@carbon/colors';
 
 .header {
   @include type.type-style('heading-03');
@@ -7,4 +8,14 @@
 
 .body {
   @include type.type-style('body-01');
+}
+
+.patientNameValue {
+  display: flex;
+  gap: layout.$spacing-03;
+  align-items: center;
+
+  & > span {
+    color: colors.$gray-40;
+  }
 }
