Added hie Patient OTP verification to use patient data and replace CR id with SHA number

--- a/packages/esm-patient-registration-app/src/client-registry/hie-client-registry/modal/confirm-hie.scss
+++ b/packages/esm-patient-registration-app/src/client-registry/hie-client-registry/modal/confirm-hie.scss
@@ -48,3 +48,15 @@
     color: colors.$gray-40;
   }
 }
+
+.grid {
+  margin: 0 layout.$spacing-05;
+  padding: layout.$spacing-05 0rem 0rem orem;
+}
+
+.otpInputRow {
+  display: flex;
+  flex-direction: row;
+  gap: layout.$spacing-03;
+  align-items: flex-end;
+}
