--- a/packages/esm-patient-search-app/src/mpi/mpi-patient-banner.scss
+++ b/packages/esm-patient-search-app/src/mpi/mpi-patient-banner.scss
@@ -1,6 +1,13 @@
 @use '@carbon/layout';
+@use '@carbon/colors';
 @use '@carbon/type';
 @use '@openmrs/esm-styleguide/src/vars' as *;
+
+.mpiPatientBanner {
+  margin: layout.$spacing-05;
+  background-color: colors.$white;
+  border: 1px solid colors.$gray-20;
+}
 
 .searchResultsDesktop {
   height: calc(100vh - layout.$spacing-10);
