--- a/packages/esm-patient-search-app/src/compact-patient-search/patient-search.scss
+++ b/packages/esm-patient-search-app/src/compact-patient-search/patient-search.scss
@@ -7,18 +7,35 @@
   background-color: $ui-02;
 }
 
-:global(.omrs-breakpoint-lt-desktop) .searchResultsContainer {
-  top: 6.25rem;
+:global(.omrs-breakpoint-lt-desktop) {
+  .searchResultsContainer {
+    top: 6.25rem;
+  }
 }
 
-:global(.omrs-breakpoint-gt-tablet) .searchResultsContainer {
-  padding: 0;
-  top: layout.$spacing-09;
+:global(.omrs-breakpoint-gt-tablet) {
+  .searchResultsContainer {
+    padding: 0;
+    top: layout.$spacing-09;
+  }
 }
 
 .searchResults {
   width: 100%;
   max-height: 22rem;
+  overflow-y: auto;
+}
+
+:global(.omrs-breakpoint-lt-desktop) {
+  .searchResults {
+    max-height: 18rem;
+  }
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .searchResults {
+    max-height: 60vh;
+  }
 }
 
 .loadingIcon {
@@ -28,9 +45,21 @@
   align-items: center;
 }
 
+:global(.omrs-breakpoint-lt-tablet) {
+  .loadingIcon {
+    padding: layout.$spacing-03 0;
+  }
+}
+
 .searchTerm {
   @include type.type-style('heading-03');
   margin-top: 0.375rem;
+}
+
+:global(.omrs-breakpoint-lt-desktop) {
+  .searchTerm {
+    @include type.type-style('heading-compact-02');
+  }
 }
 
 .resultsText {
@@ -42,14 +71,43 @@
   align-items: center;
 }
 
+:global(.omrs-breakpoint-lt-desktop) {
+  .resultsText {
+    margin: layout.$spacing-03 layout.$spacing-04;
+  }
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .resultsText {
+    margin: layout.$spacing-02 layout.$spacing-03;
+    @include type.type-style('helper-text-01');
+    flex-direction: column;
+    align-items: flex-start;
+    gap: layout.$spacing-02;
+  }
+}
+
 .resultsTextCount {
   flex: 1;
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .resultsTextCount {
+    width: 100%;
+  }
 }
 
 .validationIcon {
   flex: 1;
   justify-content: center;
   align-items: center;
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .validationIcon {
+    width: 100%;
+    justify-content: flex-start;
+  }
 }
 
 .spinner {
@@ -63,11 +121,31 @@
   margin-left: 2.375rem;
 }
 
+:global(.omrs-breakpoint-lt-desktop) {
+  .helperText {
+    margin-left: layout.$spacing-05;
+  }
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .helperText {
+    margin-left: layout.$spacing-03;
+    font-size: 0.75rem;
+  }
+}
+
 .emptyResultText {
   @include type.type-style('heading-compact-01');
   color: $text-02;
   margin-top: layout.$spacing-05;
   margin-bottom: 0.313rem;
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .emptyResultText {
+    @include type.type-style('heading-compact-01');
+    margin-top: layout.$spacing-04;
+  }
 }
 
 .actionText {
@@ -78,10 +156,32 @@
   text-align: center;
 }
 
+:global(.omrs-breakpoint-lt-tablet) {
+  .actionText {
+    @include type.type-style('body-compact-01');
+    max-width: 90%;
+    margin: layout.$spacing-02 auto 0;
+  }
+}
+
 .pagination {
   display: flex;
   justify-content: space-evenly;
   padding: 4.688rem 0 layout.$spacing-06;
+}
+
+:global(.omrs-breakpoint-lt-desktop) {
+  .pagination {
+    padding: layout.$spacing-06 0 layout.$spacing-05;
+  }
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .pagination {
+    flex-direction: column;
+    gap: layout.$spacing-03;
+    padding: layout.$spacing-05 layout.$spacing-03;
+  }
 }
 
 .emptySearchResultsTile {
@@ -90,14 +190,41 @@
   padding: layout.$spacing-08 0;
 }
 
+:global(.omrs-breakpoint-lt-desktop) {
+  .emptySearchResultsTile {
+    padding: layout.$spacing-06 layout.$spacing-03;
+  }
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .emptySearchResultsTile {
+    padding: layout.$spacing-05 layout.$spacing-03;
+  }
+}
+
 .errorMessage {
   @include type.type-style('heading-compact-02');
   margin-top: 2.25rem;
   margin-bottom: layout.$spacing-03;
 }
 
+:global(.omrs-breakpoint-lt-tablet) {
+  .errorMessage {
+    @include type.type-style('heading-compact-01');
+    margin-top: layout.$spacing-05;
+    margin-bottom: layout.$spacing-02;
+  }
+}
+
 .errorCopy {
   margin-bottom: layout.$spacing-03;
   @include type.type-style('body-01');
   color: $text-02;
+}
+
+:global(.omrs-breakpoint-lt-tablet) {
+  .errorCopy {
+    @include type.type-style('body-compact-01');
+    padding: 0 layout.$spacing-03;
+  }
 }
